@@ -1,2 +1,2 @@
-java -jar uap.jar
+java -jar -XX:+DoEscapeAnalysis -XX:+UseTLAB -XX:+PrintGC -XX:+EliminateAllocations uap.jar
 echo Start Success!
